# simse

./: .env.example  .gitignore  .gitmodules  .prototools  2026-03-05-233345-local-command-caveatcaveat-the-messages-below-w.txt  CLAUDE.md  Cargo.toml  LICENSE  README.md  biome.json  conversation-2026-03-05-223145.txt  package.json  renovate.json  tsconfig.build.json  tsconfig.json
simse-acp/: Cargo.toml
simse-acp/src/: client.rs  connection.rs  error.rs  lib.rs  main.rs  permission.rs  protocol.rs  resilience.rs  rpc_types.rs  server.rs  stream.rs  transport.rs
simse-acp/tests/: integration.rs
simse-adaptive/: Cargo.toml  README.md  moon.yml
simse-adaptive/src/: cataloging.rs  context_format.rs  deduplication.rs  distance.rs  encoder.rs  error.rs  fusion.rs  index.rs  inverted_index.rs  layer.rs  learning.rs  lib.rs  main.rs  network.rs  persistence.rs  predictor.rs  prompt_injection.rs  protocol.rs  quantization.rs  query_dsl.rs  server.rs  snapshot.rs  store.rs  text_cache.rs  topic_catalog.rs  trainer.rs  types.rs  vector_storage.rs  vocabulary.rs
simse-adaptive/src/pcn/: config.rs  encoder.rs  mod.rs  network.rs  predictor.rs  snapshot.rs  trainer.rs  vocabulary.rs
simse-adaptive/tests/: integration.rs  pcn_integration.rs
simse-bridge/: Cargo.toml
simse-bridge/src/: acp_client.rs  acp_types.rs  agentic_loop.rs  client.rs  config.rs  lib.rs  protocol.rs  session_store.rs  storage.rs  tool_registry.rs
simse-bridge/tests/: integration.rs  real_integration.rs
simse-cli/: Cargo.toml
simse-cli/src/: app.rs  at_mention.rs  autocomplete.rs  banner.rs  config.rs  dispatch.rs  error_box.rs  event_loop.rs  json_io.rs  levenshtein.rs  lib.rs  main.rs  markdown.rs  onboarding.rs  output.rs  session_store.rs  spinner.rs  status_bar.rs  tool_call_box.rs
simse-cli/src/commands/: ai.rs  library.rs  meta.rs  mod.rs  session.rs
simse-cli/src/dialogs/: confirm.rs  permission.rs
simse-cli/src/overlays/: mod.rs  ollama_wizard.rs  settings.rs
simse-cli/src/ui_core/: agentic_loop.rs  diff.rs  mod.rs  skills.rs
simse-cli/tests/: core_integration.rs  integration.rs  ui_core_integration.rs
simse-cli/tests/pty/: acp_flow.rs  autocomplete.rs  bridge_actions.rs  command_feedback.rs  commands_config.rs  commands_meta.rs  error_states.rs  mod.rs  onboarding.rs  overlays.rs  setup_wizard.rs  startup.rs
simse-core/: Cargo.toml  README.md
simse-core/benches/: index_benchmarks.rs  pcn_benchmarks.rs
simse-core/src/: agent.rs  agentic_loop.rs  config.rs  context.rs  conversation.rs  error.rs  events.rs  hooks.rs  lib.rs  logger.rs  main.rs  rpc_protocol.rs  rpc_server.rs  rpc_transport.rs  tasks.rs
simse-core/src/adaptive/: cataloging.rs  context_format.rs  deduplication.rs  distance.rs  fusion.rs  graph.rs  index.rs  inverted_index.rs  learning.rs  mod.rs  persistence.rs  quantization.rs  query_dsl.rs  store.rs  (+5 more)
simse-core/tests/: adaptive_pcn_integration.rs  agent.rs  agentic_loop.rs  builtin_tools.rs  chain.rs  chain_template.rs  config.rs  conversation.rs  error.rs  events.rs  hooks.rs  host_tools.rs  integration.rs  librarian.rs  library.rs  logger.rs  prompts.rs  rpc_chain.rs  rpc_conversation.rs  rpc_events.rs  rpc_hooks.rs  rpc_integration.rs  rpc_loop.rs  rpc_session.rs  rpc_tasks.rs  rpc_tools.rs  sandbox_vfs.rs  sandbox_vnet.rs  sandbox_vsh.rs  session.rs  subagent_tools.rs  tasks.rs  tool_registry.rs  utils.rs  vfs.rs
simse-engine/: Cargo.toml  README.md
simse-engine/src/: config.rs  error.rs  lib.rs  main.rs  protocol.rs  server.rs  transport.rs
simse-mcp/: Cargo.toml
simse-mcp/src/: client.rs  http_transport.rs  lib.rs  main.rs  mcp_server.rs  rpc_server.rs  stdio_transport.rs
simse-mcp/tests/: integration.rs
simse-predictive-coding/: Cargo.toml
simse-predictive-coding/benches/: pcn_benchmarks.rs
simse-predictive-coding/examples/: anomaly_detection.rs  model_persistence.rs  production_scale.rs  temporal_amortization.rs  training_basics.rs
simse-predictive-coding/src/: encoder.rs  error.rs  layer.rs  lib.rs  main.rs  network.rs  persistence.rs  protocol.rs  server.rs  snapshot.rs  trainer.rs  transport.rs  vocabulary.rs
simse-predictive-coding/tests/: pcn_integration.rs
simse-remote/: Cargo.toml  README.md
simse-remote/src/: auth.rs  error.rs  heartbeat.rs  lib.rs  protocol.rs  router.rs  server.rs  transport.rs  tunnel.rs
simse-resilience/: Cargo.toml
simse-resilience/src/: circuit_breaker.rs  health_monitor.rs  lib.rs  retry.rs
simse-sandbox/: Cargo.toml  README.md
simse-sandbox/src/: config.rs  error.rs  lib.rs  main.rs  protocol.rs  sandbox.rs  server.rs  vfs_backend.rs  vfs_disk.rs  vfs_search.rs  vfs_store.rs  vnet_backend.rs  vnet_mock_store.rs  vnet_network.rs  vnet_sandbox.rs  vnet_session.rs  vsh_backend.rs  vsh_sandbox.rs  vsh_shell.rs
simse-sandbox/tests/: integration.rs  vfs.rs  vnet.rs  vsh.rs
simse-tui/: Cargo.toml  README.md  moon.yml
simse-tui/src/: app.rs  at_mention.rs  autocomplete.rs  cli_args.rs  config.rs  dispatch.rs  event_loop.rs  levenshtein.rs  lib.rs  main.rs  onboarding.rs  output.rs  tool_call_box.rs
simse-tui/tests/: core_integration.rs  integration.rs
simse-ui-core/: Cargo.toml  README.md  moon.yml
simse-ui-core/src/: agentic_loop.rs  app.rs  cli.rs  diff.rs  lib.rs
simse-ui-core/tests/: integration.rs
simse-vector/engine/: Cargo.toml
simse-vfs/: .gitignore  Cargo.toml  package.json  tsconfig.json
simse-vfs/src/: backend.rs  client.ts  diff.rs  disk.rs  error.rs  lib.rs  lib.ts  local_backend.rs  logger.ts  main.rs  path.rs  protocol.rs  server.rs  transport.rs  types.ts  vfs-disk.ts  vfs.rs  vfs.ts
simse-vfs/tests/: integration.rs  vfs-disk.test.ts  vfs.test.ts
simse-vnet/: Cargo.toml
simse-vnet/src/: backend.rs  error.rs  lib.rs  local_backend.rs  main.rs  mock_store.rs  network.rs  protocol.rs  sandbox.rs  server.rs  session.rs
simse-vnet/tests/: integration.rs
simse-vsh/: Cargo.toml
simse-vsh/src/: backend.rs  error.rs  executor.rs  lib.rs  local_backend.rs  main.rs  protocol.rs  sandbox.rs  server.rs  shell.rs  transport.rs
simse-vsh/tests/: integration.rs
(+1154 files in other folders)
