[workspace]
resolver = "2"
members = [
    "simse-ui-core",
    "simse-tui",
    "simse-core",
]
exclude = [
    "simse-adaptive",
    "simse-acp",
    "simse-mcp",
    "simse-engine",
    "simse-sandbox",
    "simse-remote",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
dirs = "6"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
tui-textarea = "0.7"
clap = { version = "4", features = ["derive"] }
