[package]
name = "simse-acp-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ACP (Agent Client Protocol) engine over JSON-RPC 2.0 / NDJSON stdio"

[lib]
name = "simse_acp_engine"
path = "src/lib.rs"

[[bin]]
name = "simse-acp-engine"
path = "src/main.rs"

[dependencies]
agent-client-protocol = { git = "https://github.com/agentclientprotocol/rust-sdk", features = ["unstable"] }
simse-resilience = { path = "../simse-resilience" }
im = { version = "15", features = ["serde"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
