[package]
name = "simse-adaptive-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Adaptive learning engine over JSON-RPC 2.0 / NDJSON stdio"

[lib]
name = "simse_adaptive_engine"
path = "src/lib.rs"

[[bin]]
name = "simse-adaptive-engine"
path = "src/main.rs"

[[bench]]
name = "pcn_benchmarks"
harness = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"
base64 = "0.22"
flate2 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
rand = "0.10"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
