[package]
name = "simse-bridge"
description = "JSON-RPC bridge to SimSE TypeScript core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
simse-ui-core = { path = "../simse-ui-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
flate2 = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
uuid = { workspace = true }
