[package]
name = "simse-cli"
description = "SimSE terminal interface"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
simse-core = { path = "../simse-core" }
async-trait = "0.1"
im = "15"
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
pulldown-cmark = { version = "0.13", default-features = false }

[dev-dependencies]
tempfile = "3"
ratatui-testlib = { version = "0.1", features = ["async-tokio"] }
portable-pty = "0.9"
vt100-ctt = { version = "0.17", default-features = false }
