[package]
name = "simse-core"
version.workspace = true
edition = "2021"

[lib]
name = "simse_core"
path = "src/lib.rs"

[[bin]]
name = "simse-core-engine"
path = "src/main.rs"

[dependencies]
simse-acp-engine = { path = "../simse-acp" }
simse-mcp-engine = { path = "../simse-mcp" }
simse-adaptive-engine = { path = "../simse-adaptive" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { workspace = true }
futures.workspace = true
async-trait = "0.1"
tokio-util = "0.7"
regex.workspace = true
chrono.workspace = true
rand = "0.10"
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
