[package]
name = "simse-core"
version.workspace = true
edition.workspace = true

[lib]
name = "simse_core"
path = "src/lib.rs"

[[bin]]
name = "simse-core-engine"
path = "src/main.rs"

[dependencies]
im = "15"
simse-engine = { path = "../simse-engine" }
simse-adaptive-engine = { path = "../simse-adaptive" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { workspace = true }
futures.workspace = true
async-trait = "0.1"
tokio-util = "0.7"
regex.workspace = true
chrono.workspace = true
rand = "0.10"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
