[package]
name = "simse-core"
version.workspace = true
edition.workspace = true

[lib]
name = "simse_core"
path = "src/lib.rs"

[features]
default = ["engine", "adaptive", "sandbox", "remote"]

engine = [
    "dep:candle-core", "dep:candle-nn", "dep:candle-transformers",
    "dep:hf-hub", "dep:tokenizers", "dep:agent-client-protocol",
    "dep:ureq", "dep:anyhow",
]
adaptive = ["dep:hnsw_rs", "dep:rayon", "dep:base64", "dep:flate2"]
sandbox = ["dep:russh", "dep:russh-sftp", "dep:sha2", "dep:reqwest"]
remote = ["dep:tokio-tungstenite"]

cuda = ["engine", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["engine", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
mkl = ["engine", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
accelerate = ["engine", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
embed-weights = []

[dependencies]
im = { version = "15", features = ["serde"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1", features = ["raw_value"] }
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { workspace = true }
futures.workspace = true
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
regex.workspace = true
chrono.workspace = true
rand = "0.9"
glob = "0.3"

# Engine-gated
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
hf-hub = { version = "0.5", features = ["tokio"], optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["onig"], optional = true }
agent-client-protocol = { git = "https://github.com/agentclientprotocol/rust-sdk", features = ["unstable"], optional = true }
ureq = { version = "3", features = ["json"], optional = true }
anyhow = { version = "1", optional = true }
clap = { version = "4", features = ["derive", "env"] }

# Adaptive-gated
hnsw_rs = { version = "0.3", optional = true }
rayon = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
flate2 = { version = "1", optional = true }

# Sandbox-gated
russh = { version = "0.57.1", default-features = false, features = ["ring", "rsa", "async-trait"], optional = true }
russh-sftp = { version = "2.1", optional = true }
sha2 = { version = "0.10", optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }

# Remote-gated
tokio-tungstenite = { version = "0.28", features = ["native-tls"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "pcn_benchmarks"
harness = false

[[bench]]
name = "index_benchmarks"
harness = false
