[package]
name = "simse-mcp-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "MCP (Model Context Protocol) engine over JSON-RPC 2.0 / NDJSON stdio"

[lib]
name = "simse_mcp_engine"
path = "src/lib.rs"

[[bin]]
name = "simse-mcp-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.13", features = ["json"] }
tokio-util = "0.7"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
