[package]
name = "simse-pcn-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Predictive coding network engine over JSON-RPC 2.0 / NDJSON stdio"

[lib]
name = "simse_pcn_engine"
path = "src/lib.rs"

[[bin]]
name = "simse-pcn-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
flate2 = "1"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
