[package]
name = "simse-remote-engine"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
description = "Remote access engine over JSON-RPC 2.0 / NDJSON stdio"

[lib]
name = "simse_remote_engine"
path = "src/lib.rs"

[[bin]]
name = "simse-remote-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[workspace]
