[package]
name = "simse-sandbox-engine"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
description = "Unified sandbox engine over JSON-RPC 2.0 / NDJSON stdio"

[lib]
name = "simse_sandbox_engine"
path = "src/lib.rs"

[[bin]]
name = "simse-sandbox-engine"
path = "src/main.rs"

[dependencies]
simse-vfs-engine = { path = "../simse-vfs" }
simse-vsh-engine = { path = "../simse-vsh" }
simse-vnet-engine = { path = "../simse-vnet" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
russh = { version = "0.57", default-features = false, features = ["ring", "rsa", "async-trait"] }
russh-sftp = "2.1"
russh-keys = "0.49"
