[package]
name = "simse-sandbox-engine"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
description = "Unified sandbox engine over JSON-RPC 2.0 / NDJSON stdio"

[lib]
name = "simse_sandbox_engine"
path = "src/lib.rs"

[[bin]]
name = "simse-sandbox-engine"
path = "src/main.rs"

[dependencies]
im = { version = "15", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "time", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
russh = { version = "0.57", default-features = false, features = ["ring", "rsa", "async-trait"] }
russh-sftp = "2.1"
russh-keys = "0.49"
base64 = "0.22"
regex = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13", features = ["json"] }

[dev-dependencies]
tempfile = "3"
base64 = "0.22"

[features]
ssh-test = []
