[package]
name = "simse-tui"
description = "SimSE terminal UI powered by ratatui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
simse-ui-core = { path = "../simse-ui-core" }
simse-bridge = { path = "../simse-bridge" }
simse-core = { path = "../simse-core" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
pulldown-cmark = { version = "0.13", default-features = false }

[dev-dependencies]
tempfile = "3"
ratatui-testlib = { version = "0.1", features = ["async-tokio"] }
portable-pty = "0.8"
vt100-ctt = { version = "0.17", default-features = false }
