[package]
name = "simse-ui-core"
description = "Platform-agnostic UI logic for SimSE"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
simse-core = { path = "../simse-core" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
