[package]
name = "simse-vfs-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "In-memory VFS server over JSON-RPC 2.0 / NDJSON stdio"

[lib]
name = "simse_vfs_engine"
path = "src/lib.rs"

[[bin]]
name = "simse-vfs-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
