[package]
name = "simse-vsh-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Virtual shell server over JSON-RPC 2.0 / NDJSON stdio"

[lib]
name = "simse_vsh_engine"
path = "src/lib.rs"

[[bin]]
name = "simse-vsh-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["process", "time", "rt-multi-thread", "macros", "io-util"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
