[package]
name = "simse-vector-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Vector store engine over JSON-RPC 2.0 / NDJSON stdio"

[lib]
name = "simse_vector_engine"
path = "src/lib.rs"

[[bin]]
name = "simse-vector-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"
base64 = "0.22"
flate2 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3"
